<resources>
    <!-- SharedPreferences -->
    <string name="idioma">Idioma</string>
    <string name="preferences_diaglog_title">Cambiar idioma (castellano/inglés)</string>
    <string name="eliminar_pokemon_capturado">Permitir eliminar Pokemons</string>
    <string name="eliminar_pokemon_summary">Activar o desactivar la eliminación de Pokémon desde la pestaña Pokémon</string>
    <string name="informacion_about">Información sobre la aplicación</string>
    <string name="sesion_finalizada">Sesión de usuario finalizada</string>
    <string name="preferences_dialog_title">Configurar el idioma de la aplicación</string>
    <string name="about">Sobre la aplicación</string>
    <string name="cerrar_sesion">Cerrar sesión de usuario</string>
    <string name="cerrar_sesion_summary">Desconectar de la base de datos online</string>
    <string name="about_summary">Sobre el desarrollador y la versión</string>

    <string-array name="languages">
        <item>Castellano</item>
        <item>Inglés</item>
    </string-array>

    <string-array name="language_codes">
        <item>es</item>
        <item>en</item>
    </string-array>

    // Resto de cadenas
    <string name="app_name">Pokedex</string>
    <string name="menu_pokedex">Pokedex</string>
    <string name="menu_captured">Capturados</string>
    <string name="menu_settings">Ajustes</string>
    <string name="imagen_del_personaje">Imagen del Pokémon</string>
    <string name="language_settings">Idioma</string>
    <string name="pokemon_deletion_settings">Borrar Pokémon</string>
    <string name="allow_pokemon_deletion">Permitir borrar Pokémon capturado</string>
    <string name="about_title">Acerca de…</string>
    <string name="logout_title">Cerrar Sesión</string>
    <string name="copyright">Aplicación desarrollada por Fco. José Rodríguez Ruiz</string>
    <string name="version">Versión 1.0</string>
    <string name="ok_button">Aceptar</string>
    <string name="logout_message">La sesión se ha cerrado</string>
    <string name="configuration">Configuración</string>
    <string name="detailtitle">Detalles Pokémon</string>
    <string name="pokedex_title">Pokedex</string>
    <string name="nombre_pokemon">Nombre Pokémon</string>
    <string name="index_pokemon">#1</string>
    <string name="invalid_user">Usuario o contraseña no válidos</string>
    <string name="loading_pokedex">Cargando Pokédex…</string>
    <string name="pokemon_image">Imagen Pokémon</string>
    <string name="welcome_message">Bienvenido al Mundo Pokémon</string>
    <string name="app_logo">Mundo Pokémon</string>
    <string name="login_description">Autenticación de usuario</string>
    <string name="no_conection">Sin conexión a Internet</string>
    <string name="any_captured">No tienes Pokémon capturados</string>
    <string name="error">Error</string>
    <string name="captured_pokemons">Pokémon capturados</string>
    <string name="have">Tienes</string>
    <string name="msgErrorLoadPokemon">Hubo algún tipo de problema al cargar el Pokémon</string>
    <string name="msgCapturedPokemon">Has capturado a</string>
    <string name="msgDeleted">Pokémon eliminado</string>
    <string name="msg_without_internet">No hay conexión a Internet</string>
    <string name="login_invalido">Error en autenticacion: </string>
    <string name="pokemons_capturados_toolbar">Pokemons Capturados</string>
    <string name="detalle_pokemon">Conóceme más</string>
    <string name="hash">#</string>
    <string name="weight">Peso</string>
    <string name="height">Altura</string>
    <string name="respuesta_si">Sí</string>
    <string name="respuesta_no">No</string>
    <string name="respuesta_cancelar">Cancelar</string>
    <string name="respuesta_volver">Volver</string>
    <string name="reset_configuration">Reiniciar los ajustes</string>
    <string name="reset_configuracion_summary">Permite reiniciar la configuración por defecto</string>
    <string name="reset_confirmation">Confirma el reinicio por defecto de los ajustes</string>
    <string name="error_autenticacion">"Error al iniciar la autenticación: "</string>
    <string name="inicio_sesion_cancelado">Inicio de sesión cancelado</string>
</resources>
