<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/capturedFragment">

    <fragment
        android:id="@+id/capturedFragment"
        android:name="com.rodriguezruiz.pokedex.ui.fragment.CapturedFragment"
        android:label="@string/pokemons_capturados_toolbar"
        tools:layout="@layout/fragment_captured" />

    <fragment
        android:id="@+id/pokedexFragment"
        android:name="com.rodriguezruiz.pokedex.ui.fragment.PokedexFragment"
        android:label="@string/pokedex_title"
        tools:layout="@layout/fragment_pokedex" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.rodriguezruiz.pokedex.ui.fragment.SettingsFragment"
        android:label="@string/menu_settings" />

    <fragment
        android:id="@+id/detailPokemonFragment"
        android:name="com.rodriguezruiz.pokedex.ui.fragment.DetailPokemonFragment"
        tools:layout="@layout/fragment_detail_pokemon"
        android:label="@string/detailtitle">
        <argument
            android:name="pokemonData"
            app:argType="com.rodriguezruiz.pokedex.data.model.PokemonData" />
    </fragment>

</navigation>